@@ -629,6 +629,7 @@ All (GUI):
 - Add wxDocManager::FindDocumentByPath() (troelsk).
 - Add wxEVT_GRID_COL_AUTO_SIZE event (Igor Korot).
 - Add chainable wxWizardPageSimple::Chain() overload.
+- Add wxTextEntryDialog::SetMaxLength() (derEine).
 
 wxGTK:
 
